Novos testes introdução da listagem de turmas
Agora faltam só os testes pra os cruds que envolvam upload, também a maneira de checar se deu certo mudou, antes eu só verificava se o crud retornava uma mensagem de sucesso, agora ele verifica se o formulário foi inserido realmente, ao verificar a página pública

Em relação a listagem de turmas, eu achei que era preciso que tivessem todas as turmas(de acordo com Marconi isso é necessário pra questões de transparência) por isso não deixei as turmas para a inserção dos coordenadores, peguei direto da API, o maior problema disso é a lentidão, na página home ele vai pegar sempre as informações da turma 2017.1, as mudanças em standard_installation dizem respeito ao id das unidades, que é necessário para listar as turmas.

--- a/templates/public/home.html
+++ b/templates/public/home.html
@@ -229,40 +229,26 @@
             <header>
                 <h2><span class="glyphicon glyphicon-hourglass"></span> Horários</h2>
             </header>
-            {% for weekly_schedule in weekly_schedules %}
             <div class="panel panel-default">
                 <div class="panel-heading text-center">
-                    <h4>{{ weekly_schedule.title }}</h4>
+                    <h4>Turma de 2017.1</h4>
                 </div>
                 <table class="table schedule-table">
                     <thead>
                         <tr>
-                            <th>Dia</th>
-                            <th>Lista de aulas</th>
+                            <th>Disciplina</th>
+                            <th>Horário</th>
                         </tr>
-                    </thead>
-                    {% for day in weekly_schedule.week %}
+                    {% for class in classes %}
                     <tr>
-                        <td>
-                            {{ day.day }}
-                        </td>
-                        <td>
-                            <ul>
-                                {% for class in day.classes %}
-                                <li>
-                                    <span{% if class.isMandatory %} style="font-weight: bold" {% endif %}>
-                                        {{ class.subject }}
-                                    </span>
-                                    às {{ class.hour }}
-                                </li>
-                                {% endfor %}
-                            </ul>
+                        <td>{{ class.component_name }}</td>
+                        <td>{{ class.hours }}</td>
                         </td>
                     </tr>
                     {% endfor %}
+                    </thead>
                 </table>
             </div>
-            {% endfor %}
         </section>
     </div>
 
