Só coloquei placeholders em tudo e adicionei um limite no numero de turmas aparecendo na página inicial
O resto do dia foi fazendo um script pra pegar todos os projetos do sigaa e adicionar na database, depois de fazer isso eu exportei a coleção pra um arquivo json, quando o servidor for ter o deploy eu vou inserir esse json na database, o motivo de fazer isso é que tava impossível descobrir onde colocar os projetos, mesmo tendo acesso á "Área" por exemplo, PPGP e PPGA ambos tinham projetos na área de "Administração", e como Marconi falou que professor tem muito problema com informação exposta de projeto e que era bom ser possível editar isso, eu preferi já pegar todos os projetos atuais e colocar na database, e o resto os próprios coordenadores vão adicionando manualmente

--- a/templates/admin/add_article.html
+++ b/templates/admin/add_article.html
@@ -18,46 +18,46 @@
     <br/>
     
     {{ form.title.label }}<br/>
-    {{ form.title(required='true', class="form-control") }}
+    {{ form.title(required='true', class="form-control", placeholder="Ex: A Gestão de Pessoas na Área da Administração Pública") }}
 
     <br/>
     
     {{ form.subtitle.label }}<br/>
-    {{ form.subtitle(class="form-control") }}
+    {{ form.subtitle(class="form-control", placeholder="Ex: Uma abordagem quantitativa") }}
 
     <br/>
     
     {{ form.authors.label }}<br/>
-    {{ form.authors(required='true', class="form-control") }}
+    {{ form.authors(required='true', class="form-control", placeholder="Ex: João Guimarães Rosa e Clarice Lispector") }}
 
     <br/>
 
     {{ form.edition.label }}<br/>
-    {{ form.edition(required='true', class="form-control", type='number', step='1', min='1', max='300', placeholder='ex: 1') }}
+    {{ form.edition(required='true', class="form-control", type='number', step='1', min='1', max='300', placeholder="1") }}
 
     <br/>
     
     {{ form.location.label }}<br/>
-    {{ form.location(required='true', class="form-control") }}
+    {{ form.location(required='true', class="form-control", placeholder="Ex: São Paulo") }}
 
     <br/>
     
     {{ form.pages.label }}<br/>
-    {{ form.pages(required='true', class="form-control") }}
+    {{ form.pages(required='true', class="form-control", placeholder="Ex: 15-20") }}
     <br/>
 
     {{ form.number.label }}<br/>
-    {{ form.number(class="form-control") }}
+    {{ form.number(class="form-control", placeholder="5") }}
 
     <br/>
 
     {{ form.publisher.label }}<br/>
-    {{ form.publisher(required='true', class="form-control") }}
+    {{ form.publisher(required='true', class="form-control", placeholder="Ex: Saraiva") }}
 
     <br/>
 
     {{ form.date.label }}<br/>
-    {{ form.date(class="form-control") }}    
+    {{ form.date(class="form-control", placeholder="Ex: jan-fev 2015") }} 
 
     <br/>
     <br/>
