--- a/templates/admin/covenants.html
+++ b/templates/admin/covenants.html
@@ -15,12 +15,12 @@
     {{ form.csrf_token }}
     
     {{ form.name.label }}<br/>
-    {{ form.name(required='true', placeholder='ex: Universidade Federal do Rio de Janeiro', class="form-control") }}
+    {{ form.name(required='true', placeholder="Ex: Universidade Federal do Rio de Janeiro", class="form-control") }}
     
     <br/>
 
     {{ form.initials.label }}<br/>
-    {{ form.initials(required='true', placeholder='ex: UFRJ', class="form-control") }}
+    {{ form.initials(required='true', placeholder="ex: UFRJ", class="form-control") }}
 
     <br/>
 
