--- a/templates/admin/documents.html
+++ b/templates/admin/documents.html
@@ -15,12 +15,12 @@
     {{ form.csrf_token }}
     
     {{ form.title.label }}<br/>
-    {{ form.title(required='true', placeholder='ex: Regimento Interno', class="form-control") }}
+    {{ form.title(required='true', placeholder="Ex: Regimento Interno", class="form-control") }}
     
     <br/>
 
     {{ form.cod.label }}<br/>
-    {{ form.cod(required='true', placeholder='ex: 12-2015', class="form-control") }}
+    {{ form.cod(required='true', placeholder="Ex: 12-2015", class="form-control") }}
 
     <br/>
     {{ form.category.label }}<br/>
