--- a/templates/admin/scheduled_reports.html
+++ b/templates/admin/scheduled_reports.html
@@ -17,22 +17,22 @@
     <br/>
     
     {{ form.title.label }}<br/>
-    {{ form.title(required='true', class="form-control") }}
+    {{ form.title(required='true', class="form-control", placeholder="Ex: Direcionamento Estratégico Da Assembleia Legislativa Do Rio Grande Do Norte") }}
 
     <br/>
     
     {{ form.author.label }}<br/>
-    {{ form.author(required='true', class="form-control") }}
+    {{ form.author(required='true', class="form-control", placeholder="Ex: Carlos Eduardo Artioli Russo") }}
 
     <br/>
 
     {{ form.location.label }}<br/>
-    {{ form.location(required='true', class="form-control") }}
+    {{ form.location(required='true', class="form-control", placeholder="Ex: Sala D4 do Setor V") }}
 
     <br/>
 
     {{ form.time.label }}<br/>
-    {{ form.time(required='true', class="form-control") }}
+    {{ form.time(required='true', class="form-control", placeholder="Ex: 17/08/2017 12:30") }}
 
     <br/>
     
