--- a/templates/public/home.html
+++ b/templates/public/home.html
@@ -248,6 +248,9 @@
                     {% endfor %}
                     </thead>
                 </table>
+                <div class="panel-heading text-center">
+                    <h5><p><a href="{{ url_for('public.view_classes', initials=std.post_graduation.initials) }}"> Clique para ver o resto das turmas</a></h5>
+                </div>
             </div>
         </section>
     </div>
