--- a/templates/admin/add_staff.html
+++ b/templates/admin/add_staff.html
@@ -36,19 +36,19 @@ $(document).ready(function() {
     {{ form.csrf_token }}
     <br/>
     {{ form.name.label }}<br/>
-    {{ form.name(required='true', class="form-control") }}
+    {{ form.name(required='true', class="form-control", placeholder="Thiago Ferreira Dias") }}
     <br/>
     {{ form.abstract.label }}<br/>
-    {{ form.abstract(required='true', class="form-control", minlength='50', maxlength='1200', placeholder='ex:Possui graduação em Psicologia pela Universidade Federal do Rio Grande do Norte (1993) e mestrado em Administração (1999) e doutorado em Psicologia (2012) também pela UFRN. De 2009 a 2013 foi professor adjunto da Universidade Federal de Alagoas (UFAL), no curso de Psicologia. A partir de dezembro de 2013, passou a ser professor adjunto do Departamento de Ciências Administrativas da Universidade Federal do Rio Grande do Norte. Na Psicologia atua na área da Psicologia do Trabalho e das Organizações, com ênfase em Fatores Humanos no Trabalho. Na Administração atua na área de Gestão de Pessoas. Desde 2014 é docente permanente do Programa de Pós-Graduação em Gestão Pública, UFRN ') }}
+    {{ form.abstract(required='true', class="form-control", minlength='50', maxlength='1200', placeholder="Ex: Possui graduação em Psicologia pela Universidade Federal do Rio Grande do Norte (1993) e mestrado em Administração (1999) e doutorado em Psicologia (2012) também pela UFRN. De 2009 a 2013 foi professor adjunto da Universidade Federal de Alagoas (UFAL), no curso de Psicologia. A partir de dezembro de 2013, passou a ser professor adjunto do Departamento de Ciências Administrativas da Universidade Federal do Rio Grande do Norte. Na Psicologia atua na área da Psicologia do Trabalho e das Organizações, com ênfase em Fatores Humanos no Trabalho. Na Administração atua na área de Gestão de Pessoas. Desde 2014 é docente permanente do Programa de Pós-Graduação em Gestão Pública, UFRN ") }}
     <br/>
     {{ form.rank.label }}<br/>
-    {{ form.rank(required='true', class="form-control") }}
+    {{ form.rank(required='true', class="form-control", placeholder="Coordenador") }}
     <br/>
     {{ form.function.label }}<br/>
     {{ form.function(required='true', class="form-control") }}
     <br/>
     {{ form.photo.label}}<br/>
-    {{ form.photo(class="form-control")}}
+    {{ form.photo(class="form-control", placeholder="Ex: https://ccsa.ufrn.br/portal/wp-content/uploads/2014/08/LOGO-TOP.fw_.png")}}
     <p class="form-text text-muted">
         Procure a imagem na internet, aperte o botão direito do mouse, selecione 'Copiar endereço de imagem' ou semelhante, e cole o resultado aqui
     </p>
