--- a/templates/admin/participations.html
+++ b/templates/admin/participations.html
@@ -15,22 +15,22 @@
     {{ form.csrf_token }}
     
     {{ form.title.label }}<br/>
-    {{ form.title(required='true', class="form-control", placeholder='ex: CCSA de Tatooine') }}
+    {{ form.title(required='true', class="form-control", placeholder="Ex: Intercâmbio de pesquisa a FGV") }}
     
     <br/>
 
     {{ form.description.label }}<br/>
-    {{ form.description(required='true', class="form-control", minlength='50', maxlength='850', placeholder='ex: A professora Arlete participou como congressista, publicando 2 trabalhos.') }}
+    {{ form.description(required='true', class="form-control", minlength='50', maxlength='850', placeholder="Ex: A professora Arlete participou como congressista, publicando 2 trabalhos.") }}
 
     <br/>
 
     {{ form.year.label }}<br/>
-    {{ form.year(required='true', class="form-control", type='number', step='1', min='1970', max='2050', placeholder='ex: 2017') }}
+    {{ form.year(required='true', class="form-control", type='number', step='1', min='1970', max='2050', placeholder="Ex: 2017") }}
         
     <br/>
 
     {{ form.location.label }}<br/>
-    {{ form.location(required='true', class="form-control" , placeholder='ex: Coruscant, República Galáctica') }}
+    {{ form.location(required='true', class="form-control" , placeholder="Ex: São Paulo, Brasil") }}
 
     <br/>
     <br/>
