--- a/templates/admin/subjects.html
+++ b/templates/admin/subjects.html
@@ -18,22 +18,22 @@
     <br/>
     
     {{ form.name.label }}<br/>
-    {{ form.name(required='true', class="form-control") }}
+    {{ form.name(required='true', class="form-control", placeholder="Ex: Teoria Geral da Administração Pública ") }}
 
     <br/>
     
     {{ form.description.label }}<br/>
-    {{ form.description(required='true' , class="form-control", minlength='100', maxlength='1200', placeholder='ex: Compreensão dos campos da política, das políticas públicas e da administração pública; O Contexto decisório da Administração Pública; O Contexto organizacional da Administração Pública; O Contexto normativo da Administração Pública; Teoria das Organizações e Administração Pública; Novos paradigmas da gestão pública.') }}
+    {{ form.description(required='true' , class="form-control", minlength='100', maxlength='1200', placeholder="Ex: Compreensão dos campos da política, das políticas públicas e da administração pública; O Contexto decisório da Administração Pública; O Contexto organizacional da Administração Pública; O Contexto normativo da Administração Pública; Teoria das Organizações e Administração Pública; Novos paradigmas da gestão pública.") }}
 
     <br/>
 
     {{ form.workload_in_hours.label }}<br/>
-    {{ form.workload_in_hours(required='true', class="form-control", type='number', step='1', min='1', max='300', placeholder='ex: 30') }}
+    {{ form.workload_in_hours(required='true', class="form-control", type='number', step='1', min='1', max='300', placeholder="Ex: 30") }}
 
     <br/>
 
     {{ form.credits.label }}<br/>
-    {{ form.credits(required='true', type='number', step='1', placeholder='ex:4', class="form-control") }}    
+    {{ form.credits(required='true', type='number', step='1', placeholder="Ex: 4", class="form-control") }}    
 
     <br/>
 
